# gpu-bulwark

./: .gitignore  Cargo.toml  README.md
docs/object/program/: Program.md
examples/: Cargo.toml
examples/hello-textures/: Cargo.toml
examples/hello-triangle/: Cargo.toml
examples/hello-uniforms/: Cargo.toml
examples/hello-vertex-attributes/: Cargo.toml
examples/hello-vertex-attributes/src/: main.rs
examples/runner/: Cargo.toml
examples/shaders/: hello_textures.frag  hello_textures.vert  hello_uniforms.frag  hello_uniforms.vert  hello_uniforms_shared.vert  hello_vertices.frag  hello_vertices.vert
examples/src/: common.rs  hello_textures.rs  hello_triangle.rs  hello_uniforms.rs  hello_vertices.rs  main.rs
himark/: .gitmodules
himark/src/: lib.rs
notes/: AsRef-based-compatibility.md  AsRef-broken-compatibility.md  about-unsafe-traits.md  bounds-on-trait-decl-vs-marker-trait-impl.md  combining-disjoint-marker-traits.md  const-all-diffrernt.rs  constraint-gat.md  context-initialization.md  disjoint-blanket-location-failure.rs  effects-emulation.md  enforcing-build-in-callback.md  facades-for-hlists.md  lazy-trait-bound-checking.md  naming-complex-types.md  storage-abstraction.md  texture-internal-formats.md  todos.md  typed-vs-untyped.md
notes/object/: program.md
presentation/: c-sample.ps1  grafika.txt  presentation.md  rs-sample.ps1
presentation/c-samples/: .gitignore  Resource.h  c-samples.cpp  c-samples.rc  c-samples.sln  c-samples.vcxproj  c-samples.vcxproj.filters  common.hpp  hello_textures.hpp  hello_triangle.cpp  hello_triangle.hpp  hello_vertices.hpp  listing-1.hpp  listing-2.hpp  listing.hpp  main.cpp  sample.hpp  wrapper.hpp
presentation/rs-samples/: Cargo.toml
presentation/rs-samples/src/: listing.rs  listing_2.rs  main.rs
presentation/shaders/: frag.glsl  hello_textures.frag  hello_textures.vert  hello_triangle.frag  hello_triangle.vert  hello_uniforms.vert  vert.glsl
samples/shaders/: basic-common.vert  basic.frag  basic.vert
src/: builder.rs  constraint.rs  error.rs  ext.rs  ffi.rs  lib.rs  main.rs  md.rs  prelude.rs  renderer.rs  ts.rs  types.rs  utils.rs  valid.rs
src/constraint/: constraint.rs  mod.rs
src/gl/: attributes.rs  bounds.rs  error.rs  mod.rs  object.rs  prelude.rs  primitive.rs  types.rs  uniform.rs  valid.rs  vertex_array.rs
src/gl/buffer/: _valid.rs  mod.rs  target.rs
src/gl/image/: mod.rs
src/gl/program/: builder.rs  internal.rs  mod.rs  stage.rs  uniform.rs
src/gl/shader/: internal.rs  lib.rs  main.rs  mod.rs  prelude.rs  shared.rs  target.rs
src/gl/texture/: image.rs  mod.rs  pixel.rs  storage.rs  target.rs  valid.rs
src/gl/vertex_array/: attribute.rs  binding.rs  bounds.rs  format.rs  layout.rs  mod.rs  valid.rs  vertex_array.rs
src/glsl/: binding.rs  bounds.rs  compatible.rs  glsl.rs  layout.rs  location.rs  map.rs  mod.rs  parameters.rs  prelude.rs  qualifier.rs  sampler.rs  types.rs  uniform.rs  valid.rs  variable.rs
src/hlist/: counters.rs  indexed.rs  mod.rs
src/object/: attributes.rs  buffer.rs  mod.rs  prelude.rs  query.rs  resource.rs  shader.rs  vertex_array.rs
src/object/buffer/: mod.rs  target.rs
src/object/program/: attach.rs  builder.rs  internal.rs  layout.rs  mod.rs  stage.rs  uniform.rs
src/targets/: buffer.rs  mod.rs  prelude.rs
thesis/: bibliography.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
thesis/chapter-1/: main.aux  main.tex
thesis/chapter-2/: main.aux  main.tex
thesis/chapter-3/: main.aux  main.tex
thesis/chapter-4/: main.tex
thesis/chapter-5/: main.tex
thesis/introduction/: main.tex
thesis/listings/: type-state.rs
(+16 files in other folders)
