[package]
name = "gpu-bulwark"
version = "0.1.0"
edition = "2021"

[dependencies]
glb = { version = "0.14.0", package = "gl" }
thiserror = "1.0.49"
frunk = "0.4.2"
glutin = "0.31.1"
raw-window-handle = "0.5"
winit = { version = "0.30.0", default-features = false, features = ["rwh_05", "x11"] }
anyhow = "1.0.75"

nalgebra-glm = { version = "0.18.0", optional = true } 
nalgebra = { version = "0.32.5", optional = true }
serde = { version = "1.0.201", optional = true }
sealed = "0.5.0"
hi = { version = "0.2.0", package = "himark" }

[features]
default = ["nalgebra-glm"]
serde = ["dep:serde", "nalgebra?/serde", "nalgebra-glm?/serde-serialize"]
nalgebra = ["dep:nalgebra"]
nalgebra-glm = ["dep:nalgebra-glm"]
