[package]
name = "gpu-bulwark"
version = "0.1.0"
edition = "2021"

[dependencies]
glb = { version = "0.14.0", package = "gl" }
thiserror = "1.0.49"
glutin = "0.32"
raw-window-handle = "0.6"
winit = { version = "0.30.0", default-features = false, features = ["rwh_06"] }
anyhow = "1.0.75"

nalgebra-glm = { version = "0.18.0", optional = true } 
nalgebra = { version = "0.32.5", optional = true }
serde = { version = "1.0.201", optional = true }
sealed = "0.5.0"
hi = { path = "../rust/himark", package = "himark" }
disjoint_impls = "0.7.1"
dm = { version = "0.99.18", package = "derive_more" }
num = "0.4.3"

[features]
default = ["nalgebra-glm"]
serde = ["dep:serde", "nalgebra?/serde", "nalgebra-glm?/serde-serialize"]
nalgebra = ["dep:nalgebra"]
nalgebra-glm = ["dep:nalgebra-glm"]

[profile.dev]
quiet = false
verbose = true