[package]
name = "gpu-bulwark"
version = "0.1.0"
edition = "2021"

[dependencies]
glb = { version = "0.14.0", package = "gl" }
thiserror = "1.0.49"

nalgebra-glm = { version = "0.18.0", optional = true } 
nalgebra = { version = "0.32.5", optional = true }

hi = { path = "himark", package = "himark" }
disjoint_impls = "0.7.1"
dm = { version = "0.99.18", package = "derive_more" }
concat-idents = "1.1.5"

[features]
default = ["nalgebra-glm"]
nalgebra = ["dep:nalgebra"]
nalgebra-glm = ["dep:nalgebra-glm"]

[profile.dev]
quiet = false
verbose = true
