[package]
name = "samples"
version = "0.1.0"
edition = "2021"

[dependencies]
gb = { package = "gpu-bulwark", path = "../../", features = ["nalgebra-glm"] }
glm = { package = "nalgebra-glm", version = "0.18.0" }
glutin-winit = "0.5" 
glutin = "0.32.0"
raw-window-handle = "0.6"
winit = "0.30.0"
anyhow = "1.0.75"
image = "0.25.2"
slice-of-array = "0.3.2"


[features]
listing_1 = []
listing_2 = []
